@@ -5,6 +5,7 @@ module Webrat
     attr_reader :response
     
     def get(url, data, headers = nil)
+<<<<<<< HEAD:lib/webrat/merb.rb
       @response = request(url, :params => data, :headers => headers, :method => "GET")
     end
   
@@ -22,12 +23,40 @@ module Webrat
     
     def response_body
       @response.body
+=======
+      do_request(url, data, headers, "GET")
+    end
+  
+    def post(url, data, headers = nil)
+      do_request(url, data, headers, "POST")
+    end
+  
+    def put(url, data, headers = nil)
+      do_request(url, data, headers, "PUT")
+    end
+  
+    def delete(url, data, headers = nil)
+      do_request(url, data, headers, "DELETE")
+    end
+    
+    def response_body
+      @response.body.to_s
+>>>>>>> 86879c13c05ad0448456575f148495bf700e1d4c:lib/webrat/merb.rb
     end
     
     def response_code
       @response.status
     end
     
+<<<<<<< HEAD:lib/webrat/merb.rb
+=======
+    protected
+    def do_request(url, data, headers, method)
+      @response = request(url, :params => data, :headers => headers, :method => method)
+      self.get(@response.headers['Location'], nil, @response.headers) if @response.status == 302
+    end
+    
+>>>>>>> 86879c13c05ad0448456575f148495bf700e1d4c:lib/webrat/merb.rb
   end
 end
 
@@ -37,6 +66,7 @@ class Merb::Test::RspecStory
   end
 end
 
+<<<<<<< HEAD:lib/webrat/merb.rb
 
 # 
 # class Application < Merb::Controller
@@ -57,3 +87,5 @@ require File.join(File.dirname(__FILE__), "merb", "url_encoded_pair_parser.rb")
 # 
 # 
 # 
+=======
+>>>>>>> 86879c13c05ad0448456575f148495bf700e1d4c:lib/webrat/merb.rb
