@@ -2,6 +2,8 @@
 
 * Major enhancements
 
+  * Added #basic_auth(user, pass) to support HTTP Basic Auth (Aslak Hellesøy)
+  * Added support for Sinatra and Rack (Aslak Hellesøy)
   * Added #within for manipulating the current page within a selector scope
   * Add should_see and should_not_see for verifying HTML response bodys
   * Add support for simulating SSL requests (Luke Melia)
